# d2parse

./: .gitignore  DOTA_COMBATLOG_TYPES.py  DOTA_UNIT_ORDER_TYPES.py  DemoClass.py  DemoParser.py  FileReader.py  GameEvent.py  HuffmanLeaf.py  HuffmanNode.py  NewEntity.py  PendingMessage.py  PlayerInfo.py  QuantizedFloatDecoder.py  Serializer.py  StringTable.py  StringTableItem.py  messages.py  parser.py  plotshit.py  pyproject.toml  rendering.py  utils.py
DemoParser/: MessageParser.py  __init__.py
Field/: Field.py  FieldModelEnum.py  FieldPatch.py  FieldPath.py  FieldPathOp.py  FieldState.py  FieldType.py
Game/: __init__.py
proto/: ai_activity_pb2.py  demo.proto  demo_pb2.py  dota_commonmessages.proto  dota_commonmessages_pb2.py  dota_gcmessages_common_match_management.proto  dota_modifiers.proto  dota_modifiers_pb2.py  dota_shared_enums.proto  dota_shared_enums_pb2.py  dota_usermessages.proto  dota_usermessages_pb2.py  netmessages.proto  netmessages_pb2.py  network_connection.proto  network_connection_pb2.py  networkbasetypes.proto  networkbasetypes_pb2.py  usermessages.proto  usermessages_pb2.py
